flex/grammar.output
Terminals unused in grammar

    SEMICOLON
    OTHER
    EQ
    NEQ
    LTEQ
    GTEQ


Grammar

    0 $accept: prog $end

    1 prog: lines

    2 lines: ε
    3      | lines line NEWLINE

    4 line: opt_skip opt_seps
    5     | opt_skip opt_seps exprs opt_seps
    6     | error

    7 opt_skip: ε
    8         | '/'

    9 opt_seps: ε
   10         | seps

   11 seps: SEP
   12     | seps SEP

   13 exprs: expr
   14      | exprs seps expr

   15 $@1: ε

   16 expr: IF SEP bool_expr $@1 if_body ENDIF
   17     | CMD arith_expr
   18     | assignment
   19     | LABEL
   20     | GOTO SEP MISC_ID
   21     | SPECIAL_CMD
   22     | CALL SEP STRING
   23     | MISC_ID
   24     | fn
   25     | COMMENT

   26 if_body: ε
   27        | if_body if_element

   28 if_element: expr
   29           | SEP
   30           | NEWLINE

   31 assignment: VAR '=' arith_expr
   32           | CMD '=' arith_expr
   33           | CUSTOM_VAR '=' arith_expr
   34           | CUSTOM_VAR SEP arith_expr

   35 val: VAR
   36    | CUSTOM_VAR
   37    | INT
   38    | FLOAT

   39 fn: MISC_ID '(' params ')'

   40 params: ε
   41       | arith_expr
   42       | MISC_ID
   43       | params ',' arith_expr
   44       | params ',' MISC_ID

   45 arith_expr: val
   46           | fn
   47           | arith_expr '+' arith_expr
   48           | arith_expr '-' arith_expr
   49           | arith_expr '*' arith_expr
   50           | arith_expr '/' arith_expr
   51           | '(' arith_expr ')'
   52           | '-' arith_expr

   53 bool_expr: arith_expr '<' arith_expr
   54          | arith_expr '>' arith_expr
   55          | arith_expr '=' '=' arith_expr
   56          | arith_expr '!' '=' arith_expr
   57          | arith_expr '<' '=' arith_expr
   58          | arith_expr '>' '=' arith_expr
   59          | '!' bool_expr
   60          | '(' bool_expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 56 59
    '(' (40) 39 51 60
    ')' (41) 39 51 60
    '*' (42) 49
    '+' (43) 47
    ',' (44) 43 44
    '-' (45) 48 52
    '/' (47) 8 50
    '<' (60) 53 57
    '=' (61) 31 32 33 55 56 57 58
    '>' (62) 54 58
    error (256) 6
    SEP (258) 11 12 16 20 22 29 34
    NEWLINE (259) 3 30
    SEMICOLON (260)
    COMMENT (261) 25
    OTHER (262)
    STRING <char*> (263) 22
    INT <int> (264) 37
    FLOAT <float> (265) 38
    EQ (266)
    NEQ (267)
    LTEQ (268)
    GTEQ (269)
    IF (270) 16
    ENDIF (271) 16
    GOTO (272) 20
    VAR <char*> (273) 31 35
    CMD <char*> (274) 17 32
    SPECIAL_CMD <char*> (275) 21
    CUSTOM_VAR <char*> (276) 33 34 36
    CALL (277) 22
    MISC_ID <char*> (278) 20 23 39 42 44
    LABEL <char*> (279) 19


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    prog (37)
        on left: 1
        on right: 0
    lines (38)
        on left: 2 3
        on right: 1 3
    line (39)
        on left: 4 5 6
        on right: 3
    opt_skip (40)
        on left: 7 8
        on right: 4 5
    opt_seps (41)
        on left: 9 10
        on right: 4 5
    seps (42)
        on left: 11 12
        on right: 10 12 14
    exprs (43)
        on left: 13 14
        on right: 5 14
    expr (44)
        on left: 16 17 18 19 20 21 22 23 24 25
        on right: 13 14 28
    $@1 (45)
        on left: 15
        on right: 16
    if_body (46)
        on left: 26 27
        on right: 16 27
    if_element (47)
        on left: 28 29 30
        on right: 27
    assignment (48)
        on left: 31 32 33 34
        on right: 18
    val <float> (49)
        on left: 35 36 37 38
        on right: 45
    fn <float> (50)
        on left: 39
        on right: 24 46
    params (51)
        on left: 40 41 42 43 44
        on right: 39 43 44
    arith_expr <float> (52)
        on left: 45 46 47 48 49 50 51 52
        on right: 17 31 32 33 34 41 43 47 48 49 50 51 52 53 54 55 56 57 58
    bool_expr <int> (53)
        on left: 53 54 55 56 57 58 59 60
        on right: 16 59 60


State 0

    0 $accept: • prog $end

    $default  reduce using rule 2 (lines)

    prog   go to state 1
    lines  go to state 2


State 1

    0 $accept: prog • $end

    $end  shift, and go to state 3


State 2

    1 prog: lines •
    3 lines: lines • line NEWLINE

    error  shift, and go to state 4
    '/'    shift, and go to state 5

    $end         reduce using rule 1 (prog)
    SEP          reduce using rule 7 (opt_skip)
    NEWLINE      reduce using rule 7 (opt_skip)
    COMMENT      reduce using rule 7 (opt_skip)
    IF           reduce using rule 7 (opt_skip)
    GOTO         reduce using rule 7 (opt_skip)
    VAR          reduce using rule 7 (opt_skip)
    CMD          reduce using rule 7 (opt_skip)
    SPECIAL_CMD  reduce using rule 7 (opt_skip)
    CUSTOM_VAR   reduce using rule 7 (opt_skip)
    CALL         reduce using rule 7 (opt_skip)
    MISC_ID      reduce using rule 7 (opt_skip)
    LABEL        reduce using rule 7 (opt_skip)

    line      go to state 6
    opt_skip  go to state 7


State 3

    0 $accept: prog $end •

    $default  accept


State 4

    6 line: error •

    $default  reduce using rule 6 (line)


State 5

    8 opt_skip: '/' •

    $default  reduce using rule 8 (opt_skip)


State 6

    3 lines: lines line • NEWLINE

    NEWLINE  shift, and go to state 8


State 7

    4 line: opt_skip • opt_seps
    5     | opt_skip • opt_seps exprs opt_seps

    SEP  shift, and go to state 9

    $default  reduce using rule 9 (opt_seps)

    opt_seps  go to state 10
    seps      go to state 11


State 8

    3 lines: lines line NEWLINE •

    $default  reduce using rule 3 (lines)


State 9

   11 seps: SEP •

    $default  reduce using rule 11 (seps)


State 10

    4 line: opt_skip opt_seps •
    5     | opt_skip opt_seps • exprs opt_seps

    COMMENT      shift, and go to state 12
    IF           shift, and go to state 13
    GOTO         shift, and go to state 14
    VAR          shift, and go to state 15
    CMD          shift, and go to state 16
    SPECIAL_CMD  shift, and go to state 17
    CUSTOM_VAR   shift, and go to state 18
    CALL         shift, and go to state 19
    MISC_ID      shift, and go to state 20
    LABEL        shift, and go to state 21

    $default  reduce using rule 4 (line)

    exprs       go to state 22
    expr        go to state 23
    assignment  go to state 24
    fn          go to state 25


State 11

   10 opt_seps: seps •
   12 seps: seps • SEP

    SEP  shift, and go to state 26

    $default  reduce using rule 10 (opt_seps)


State 12

   25 expr: COMMENT •

    $default  reduce using rule 25 (expr)


State 13

   16 expr: IF • SEP bool_expr $@1 if_body ENDIF

    SEP  shift, and go to state 27


State 14

   20 expr: GOTO • SEP MISC_ID

    SEP  shift, and go to state 28


State 15

   31 assignment: VAR • '=' arith_expr

    '='  shift, and go to state 29


State 16

   17 expr: CMD • arith_expr
   32 assignment: CMD • '=' arith_expr

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '='         shift, and go to state 36
    '('         shift, and go to state 37

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 40


State 17

   21 expr: SPECIAL_CMD •

    $default  reduce using rule 21 (expr)


State 18

   33 assignment: CUSTOM_VAR • '=' arith_expr
   34           | CUSTOM_VAR • SEP arith_expr

    SEP  shift, and go to state 41
    '='  shift, and go to state 42


State 19

   22 expr: CALL • SEP STRING

    SEP  shift, and go to state 43


State 20

   23 expr: MISC_ID •
   39 fn: MISC_ID • '(' params ')'

    '('  shift, and go to state 44

    $default  reduce using rule 23 (expr)


State 21

   19 expr: LABEL •

    $default  reduce using rule 19 (expr)


State 22

    5 line: opt_skip opt_seps exprs • opt_seps
   14 exprs: exprs • seps expr

    SEP  shift, and go to state 9

    $default  reduce using rule 9 (opt_seps)

    opt_seps  go to state 45
    seps      go to state 46


State 23

   13 exprs: expr •

    $default  reduce using rule 13 (exprs)


State 24

   18 expr: assignment •

    $default  reduce using rule 18 (expr)


State 25

   24 expr: fn •

    $default  reduce using rule 24 (expr)


State 26

   12 seps: seps SEP •

    $default  reduce using rule 12 (seps)


State 27

   16 expr: IF SEP • bool_expr $@1 if_body ENDIF

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '('         shift, and go to state 47
    '!'         shift, and go to state 48

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 49
    bool_expr   go to state 50


State 28

   20 expr: GOTO SEP • MISC_ID

    MISC_ID  shift, and go to state 51


State 29

   31 assignment: VAR '=' • arith_expr

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '('         shift, and go to state 37

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 52


State 30

   37 val: INT •

    $default  reduce using rule 37 (val)


State 31

   38 val: FLOAT •

    $default  reduce using rule 38 (val)


State 32

   35 val: VAR •

    $default  reduce using rule 35 (val)


State 33

   36 val: CUSTOM_VAR •

    $default  reduce using rule 36 (val)


State 34

   39 fn: MISC_ID • '(' params ')'

    '('  shift, and go to state 44


State 35

   52 arith_expr: '-' • arith_expr

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '('         shift, and go to state 37

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 53


State 36

   32 assignment: CMD '=' • arith_expr

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '('         shift, and go to state 37

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 54


State 37

   51 arith_expr: '(' • arith_expr ')'

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '('         shift, and go to state 37

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 55


State 38

   45 arith_expr: val •

    $default  reduce using rule 45 (arith_expr)


State 39

   46 arith_expr: fn •

    $default  reduce using rule 46 (arith_expr)


State 40

   17 expr: CMD arith_expr •
   47 arith_expr: arith_expr • '+' arith_expr
   48           | arith_expr • '-' arith_expr
   49           | arith_expr • '*' arith_expr
   50           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59

    $default  reduce using rule 17 (expr)


State 41

   34 assignment: CUSTOM_VAR SEP • arith_expr

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '('         shift, and go to state 37

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 60


State 42

   33 assignment: CUSTOM_VAR '=' • arith_expr

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '('         shift, and go to state 37

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 61


State 43

   22 expr: CALL SEP • STRING

    STRING  shift, and go to state 62


State 44

   39 fn: MISC_ID '(' • params ')'

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 63
    '-'         shift, and go to state 35
    '('         shift, and go to state 37

    $default  reduce using rule 40 (params)

    val         go to state 38
    fn          go to state 39
    params      go to state 64
    arith_expr  go to state 65


State 45

    5 line: opt_skip opt_seps exprs opt_seps •

    $default  reduce using rule 5 (line)


State 46

   10 opt_seps: seps •
   12 seps: seps • SEP
   14 exprs: exprs seps • expr

    SEP          shift, and go to state 26
    COMMENT      shift, and go to state 12
    IF           shift, and go to state 13
    GOTO         shift, and go to state 14
    VAR          shift, and go to state 15
    CMD          shift, and go to state 16
    SPECIAL_CMD  shift, and go to state 17
    CUSTOM_VAR   shift, and go to state 18
    CALL         shift, and go to state 19
    MISC_ID      shift, and go to state 20
    LABEL        shift, and go to state 21

    $default  reduce using rule 10 (opt_seps)

    expr        go to state 66
    assignment  go to state 24
    fn          go to state 25


State 47

   51 arith_expr: '(' • arith_expr ')'
   60 bool_expr: '(' • bool_expr ')'

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '('         shift, and go to state 47
    '!'         shift, and go to state 48

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 67
    bool_expr   go to state 68


State 48

   59 bool_expr: '!' • bool_expr

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '('         shift, and go to state 47
    '!'         shift, and go to state 48

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 49
    bool_expr   go to state 69


State 49

   47 arith_expr: arith_expr • '+' arith_expr
   48           | arith_expr • '-' arith_expr
   49           | arith_expr • '*' arith_expr
   50           | arith_expr • '/' arith_expr
   53 bool_expr: arith_expr • '<' arith_expr
   54          | arith_expr • '>' arith_expr
   55          | arith_expr • '=' '=' arith_expr
   56          | arith_expr • '!' '=' arith_expr
   57          | arith_expr • '<' '=' arith_expr
   58          | arith_expr • '>' '=' arith_expr

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    '='  shift, and go to state 70
    '<'  shift, and go to state 71
    '>'  shift, and go to state 72
    '!'  shift, and go to state 73


State 50

   16 expr: IF SEP bool_expr • $@1 if_body ENDIF

    $default  reduce using rule 15 ($@1)

    $@1  go to state 74


State 51

   20 expr: GOTO SEP MISC_ID •

    $default  reduce using rule 20 (expr)


State 52

   31 assignment: VAR '=' arith_expr •
   47 arith_expr: arith_expr • '+' arith_expr
   48           | arith_expr • '-' arith_expr
   49           | arith_expr • '*' arith_expr
   50           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59

    $default  reduce using rule 31 (assignment)


State 53

   47 arith_expr: arith_expr • '+' arith_expr
   48           | arith_expr • '-' arith_expr
   49           | arith_expr • '*' arith_expr
   50           | arith_expr • '/' arith_expr
   52           | '-' arith_expr •

    '*'  shift, and go to state 58
    '/'  shift, and go to state 59

    $default  reduce using rule 52 (arith_expr)


State 54

   32 assignment: CMD '=' arith_expr •
   47 arith_expr: arith_expr • '+' arith_expr
   48           | arith_expr • '-' arith_expr
   49           | arith_expr • '*' arith_expr
   50           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59

    $default  reduce using rule 32 (assignment)


State 55

   47 arith_expr: arith_expr • '+' arith_expr
   48           | arith_expr • '-' arith_expr
   49           | arith_expr • '*' arith_expr
   50           | arith_expr • '/' arith_expr
   51           | '(' arith_expr • ')'

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    ')'  shift, and go to state 75


State 56

   47 arith_expr: arith_expr '+' • arith_expr

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '('         shift, and go to state 37

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 76


State 57

   48 arith_expr: arith_expr '-' • arith_expr

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '('         shift, and go to state 37

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 77


State 58

   49 arith_expr: arith_expr '*' • arith_expr

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '('         shift, and go to state 37

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 78


State 59

   50 arith_expr: arith_expr '/' • arith_expr

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '('         shift, and go to state 37

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 79


State 60

   34 assignment: CUSTOM_VAR SEP arith_expr •
   47 arith_expr: arith_expr • '+' arith_expr
   48           | arith_expr • '-' arith_expr
   49           | arith_expr • '*' arith_expr
   50           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59

    $default  reduce using rule 34 (assignment)


State 61

   33 assignment: CUSTOM_VAR '=' arith_expr •
   47 arith_expr: arith_expr • '+' arith_expr
   48           | arith_expr • '-' arith_expr
   49           | arith_expr • '*' arith_expr
   50           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59

    $default  reduce using rule 33 (assignment)


State 62

   22 expr: CALL SEP STRING •

    $default  reduce using rule 22 (expr)


State 63

   39 fn: MISC_ID • '(' params ')'
   42 params: MISC_ID •

    '('  shift, and go to state 44

    $default  reduce using rule 42 (params)


State 64

   39 fn: MISC_ID '(' params • ')'
   43 params: params • ',' arith_expr
   44       | params • ',' MISC_ID

    ')'  shift, and go to state 80
    ','  shift, and go to state 81


State 65

   41 params: arith_expr •
   47 arith_expr: arith_expr • '+' arith_expr
   48           | arith_expr • '-' arith_expr
   49           | arith_expr • '*' arith_expr
   50           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59

    $default  reduce using rule 41 (params)


State 66

   14 exprs: exprs seps expr •

    $default  reduce using rule 14 (exprs)


State 67

   47 arith_expr: arith_expr • '+' arith_expr
   48           | arith_expr • '-' arith_expr
   49           | arith_expr • '*' arith_expr
   50           | arith_expr • '/' arith_expr
   51           | '(' arith_expr • ')'
   53 bool_expr: arith_expr • '<' arith_expr
   54          | arith_expr • '>' arith_expr
   55          | arith_expr • '=' '=' arith_expr
   56          | arith_expr • '!' '=' arith_expr
   57          | arith_expr • '<' '=' arith_expr
   58          | arith_expr • '>' '=' arith_expr

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    '='  shift, and go to state 70
    ')'  shift, and go to state 75
    '<'  shift, and go to state 71
    '>'  shift, and go to state 72
    '!'  shift, and go to state 73


State 68

   60 bool_expr: '(' bool_expr • ')'

    ')'  shift, and go to state 82


State 69

   59 bool_expr: '!' bool_expr •

    $default  reduce using rule 59 (bool_expr)


State 70

   55 bool_expr: arith_expr '=' • '=' arith_expr

    '='  shift, and go to state 83


State 71

   53 bool_expr: arith_expr '<' • arith_expr
   57          | arith_expr '<' • '=' arith_expr

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '='         shift, and go to state 84
    '('         shift, and go to state 37

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 85


State 72

   54 bool_expr: arith_expr '>' • arith_expr
   58          | arith_expr '>' • '=' arith_expr

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 34
    '-'         shift, and go to state 35
    '='         shift, and go to state 86
    '('         shift, and go to state 37

    val         go to state 38
    fn          go to state 39
    arith_expr  go to state 87


State 73

   56 bool_expr: arith_expr '!' • '=' arith_expr

    '='  shift, and go to state 88


State 74

   16 expr: IF SEP bool_expr $@1 • if_body ENDIF

    $default  reduce using rule 26 (if_body)

    if_body  go to state 89


State 75

   51 arith_expr: '(' arith_expr ')' •

    $default  reduce using rule 51 (arith_expr)


State 76

   47 arith_expr: arith_expr • '+' arith_expr
   47           | arith_expr '+' arith_expr •
   48           | arith_expr • '-' arith_expr
   49           | arith_expr • '*' arith_expr
   50           | arith_expr • '/' arith_expr

    '*'  shift, and go to state 58
    '/'  shift, and go to state 59

    $default  reduce using rule 47 (arith_expr)


State 77

   47 arith_expr: arith_expr • '+' arith_expr
   48           | arith_expr • '-' arith_expr
   48           | arith_expr '-' arith_expr •
   49           | arith_expr • '*' arith_expr
   50           | arith_expr • '/' arith_expr

    '*'  shift, and go to state 58
    '/'  shift, and go to state 59

    $default  reduce using rule 48 (arith_expr)


State 78

   47 arith_expr: arith_expr • '+' arith_expr
   48           | arith_expr • '-' arith_expr
   49           | arith_expr • '*' arith_expr
   49           | arith_expr '*' arith_expr •
   50           | arith_expr • '/' arith_expr

    $default  reduce using rule 49 (arith_expr)


State 79

   47 arith_expr: arith_expr • '+' arith_expr
   48           | arith_expr • '-' arith_expr
   49           | arith_expr • '*' arith_expr
   50           | arith_expr • '/' arith_expr
   50           | arith_expr '/' arith_expr •

    $default  reduce using rule 50 (arith_expr)


State 80

   39 fn: MISC_ID '(' params ')' •

    $default  reduce using rule 39 (fn)


State 81

   43 params: params ',' • arith_expr
   44       | params ',' • MISC_ID

    INT         shift, and go to state 30
    FLOAT       shift, and go to state 31
    VAR         shift, and go to state 32
    CUSTOM_VAR  shift, and go to state 33
    MISC_ID     shift, and go to state 90
    '-'         shift, and go to state 35
    '('         shift, and go to state 37
